Adicionando Roles e os métodos dos controllers